kubernetes/elabftw/elabftw.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elabftw-app
  labels:
    app: elabftw-app
spec:
  serviceName: elabftw
  replicas: 1
  selector:
    matchLabels:
      app: elabftw-app
  template:
    metadata:
      labels:
        app: elabftw-app
    spec:
      containers:
        - name: app
          image: elabftw/elabimg:3.6.4
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: upload
              mountPath: /elabftw/uploads
            - name: install-db-script
              mountPath: /etc/cont-init.d/99-install-db
              subPath: 99-install-db
          ports:
            - containerPort: 443
      volumes:
        - name: install-db-script
          configMap:
            name: install-db-script
            defaultMode: 0755

  volumeClaimTemplates:
    - metadata:
        name: upload
        labels:
          app: elabftw-app
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: longhorn
