kubernetes/elabftw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elabftw-app
  labels:
    app: elabftw-app
spec:
  ports:
    - port: 80
      targetPort: 443
      appProtocol: http
  selector:
    app: elabftw-app
