kubernetes/elabftw/elabftw.yml
---
apiVersion: v1
kind: Service
metadata:
  name: elabftw
  namespace: elabftw
  labels:
    app: elabftw-app
spec:
  ports:
    - port: 80
      targetPort: 443
      name: http
  selector:
    app: elabftw-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elabftw-ingress
  namespace: elabftw
spec:
  rules:
    - host: elabftw.s.astrid.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elabftw
                port:
                  name: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elabftw
  namespace: elabftw
  labels:
    app: elabftw-app
spec:
  serviceName: elabftw
  replicas: 1
  selector:
    matchLabels:
      app: elabftw-app
  template:
    metadata:
      labels:
        app: elabftw-app
    spec:
      containers:
        - name: app
          image: elabftw/elabimg:latest
          resources:
            limits:
              cpu: 1000m
              memory: 500Mi
          volumeMounts:
            - name: upload
              mountPath: /elabftw/uploads
          ports:
            - containerPort: 443
              name: http
  volumeClaimTemplates:
    - metadata:
        name: upload
        labels:
          app: elabftw
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: elabftw-upload
