kubernetes/elabftw/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elabftw-ingress
spec:
  rules:
    - host: elabftw.s.astrid.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elabftw-app
                port:
                  number: 80
